deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dumb-express-app
  name: dumb-express-deployment
  namespace: dumb-express
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: dumb-express-app
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 0%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dumb-express-app
    spec:
      containers:
        - args: ["node", "index.js"]
          image: kopjra/dumb-express:latest
          imagePullPolicy: Always
          name: dumb-express-container
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 5858
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
